--- a/materials/AIPD/submitted/2024-2.md
+++ b/materials/AIPD/submitted/2024-2.md
@@ -9,10 +9,10 @@ location: "Debrecen, Hungary"
 ---
 
 - Custome- E-Commerce Data: [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/2024/custome- e-commerce-data.pdf), 
-[colab](https://drive.google.com/file/d/17W81tv4W2XDlD8dezmoaAT9vpcMOF_Nc/view?usp=sharing)
-- Airline Passenger Satisfaction Analysis: [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/2024/airline-passenger-satisfaction-analysis.pdf), [colab](https://drive.google.com/file/d/1wsPxZnKCIuymmiTOw8FyWxsup9FD0msB/view?usp=sharing)
-- Energy Consumption Prediction: [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/2024/energy-consumption-prediction.pdf), [colab](https://drive.google.com/file/d/1B7BggykGb8HKfTFxaNUpluiWT1oWXYTC/view?usp=sharing)
-- Health and Lifestyle: [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/2024/health-and-lifestyle.pdf), [colab](https://drive.google.com/file/d/1Absh0bUiEkEWmYcV2aFXGwXJSPNow5jU/view?usp=sharing)
-- MPG REG [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/custome- e-commerce-data.pdf), [colab](https://drive.google.com/file/d/1okV01Ha-2kOp2-hZ7oyPl3CXmp2P3NVB/view?usp=sharing)
-- Predicting The Success Of Movies: [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/2024/predicting-the-success-of-movies.pdf), [colab](https://drive.google.com/file/d/1KFHnVFYVJPNaR9RzmE2pnOouyPZAqNR0/view?usp=sharing)
-- Sentiment Analysis Of Financial News For Stock Predication: [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/sentiment-analysis-of-financial-news-for-stock-predication.pdf), [colab](https://drive.google.com/file/d/1CBAZ6tABhpyTNpTnI0R1p4DS1cZWIwE5/view?usp=sharing)
+[colab](https://colab.research.google.com/drive/17W81tv4W2XDlD8dezmoaAT9vpcMOF_Nc)
+- Airline Passenger Satisfaction Analysis: [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/2024/airline-passenger-satisfaction-analysis.pdf), [colab](https://colab.research.google.com/drive/1wsPxZnKCIuymmiTOw8FyWxsup9FD0msB)
+- Energy Consumption Prediction: [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/2024/energy-consumption-prediction.pdf), [colab](https://colab.research.google.com/drive/1B7BggykGb8HKfTFxaNUpluiWT1oWXYTC)
+- Health and Lifestyle: [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/2024/health-and-lifestyle.pdf), [colab](https://colab.research.google.com/drive/1Absh0bUiEkEWmYcV2aFXGwXJSPNow5jU)
+- MPG REG [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/2024/mpg-reg.pdf), [colab](https://colab.research.google.com/drive/1okV01Ha-2kOp2-hZ7oyPl3CXmp2P3NVB)
+- Predicting The Success Of Movies: [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/2024/predicting-the-success-of-movies.pdf), [colab](https://colab.research.google.com/drive/1KFHnVFYVJPNaR9RzmE2pnOouyPZAqNR0)
+- Sentiment Analysis Of Financial News For Stock Predication: [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/sentiment-analysis-of-financial-news-for-stock-predication.pdf), [colab](https://colab.research.google.com/drive/1CBAZ6tABhpyTNpTnI0R1p4DS1cZWIwE5)
