--- a/materials/NLP-I/submitted/2025-2-eval.md
+++ b/materials/NLP-I/submitted/2025-2-eval.md
@@ -10,6 +10,11 @@ location: "Debrecen, Hungary"
 
 # Evaluation
 
+## Neptun code(s): S4BMSQ, KCRMSH
+- **Recommended grade(s):** 5
+- **Textual evaluation:** The submission fulfills all the requirements for a grade of 5. The task is clearly related to text processing, specifically movie genre prediction based on plot summaries. The implementation utilizes text data and incorporates extensive preprocessing and cleaning procedures, including lowercasing, whitespace removal, special character and number removal, HTML tag stripping, stop word removal, and punctuation handling. These cleaning steps are further validated with unit tests, as mentioned in the source code evaluation and corroborated by the video's explanation of unit testing for text cleaning. The project trains and evaluates multiple machine learning models: GloVe embeddings with a Dense layer, CountVectorizer with a Dense layer, and two TF-IDF models (simple and expanded). The models are trained on a training set and evaluated on a test set, with validation sets also used during training. The evaluation is comprehensive, employing metrics like accuracy and loss, and is presented as a benchmark to compare the models. Visualizations, including Word Clouds, PCA, and UMAP, are used to examine the behavior and balance of the data and the model's operation. The video demonstrates the operation of the best-performing model, the TF-IDF Expanded model, through a Gradio interface, showcasing its ability to predict genres for given movie descriptions. The conclusion drawn from the benchmark analysis is consistent and coherent, identifying the TF-IDF Expanded model as the most effective for the task. The source code evaluation and the video presentation are highly consistent, with the video elaborating on the concepts and processes described in the code evaluation, such as the different vectorization techniques (CountVectorizer, TF-IDF, GloVe) and their underlying principles, as well as the model training and evaluation stages. The explanation of concepts like overfitting, underfitting, and the importance of weighted word importance in TF-IDF is accurate and well-presented in the video.
+
+
 ## Neptun code(s): QX4P71
 - **Recommended grade(s):** 4
 - **Textual evaluation:**
