--- a/materials/NLP-I/submitted/2025-2-eval.md
+++ b/materials/NLP-I/submitted/2025-2-eval.md
@@ -127,9 +127,9 @@ evaulation_01.md
  The submission meets the requirements for a grade of 4. The task is related to text processing and uses text data for implementation. Several preprocessing and cleaning procedures are included, such as text cleaning, tokenization, and vectorization. Machine learning models (Logistic Regression, Linear SVM, Random Forest) were trained and evaluated on a test dataset. The model's operation is demonstrated in an embedded Gradio application. Data mining analysis was performed, examining the behavior and balance of the data. Unit tests for data cleaning are mentioned and demonstrated in the video. The model is evaluated with several metrics (accuracy, precision, recall, f1-score, AUC-ROC, confusion matrix, classification report), and visualizations are used to examine the model's operation. The video presentation is consistent with the code evaluation, explaining the preprocessing steps, model training, evaluation metrics, and the embedded application. The explanation of concepts like tokenization, stemming, TF-IDF, and evaluation metrics is accurate. The conclusion provided in the code evaluation is also coherent with the findings presented in the video.
 
 ## Neptun code(s): WSZJEV
-- **Recommended grade(s):** 4
+- **Recommended grade(s):** 5
 - **Textual evaluation:**
- The submission meets the requirements for a grade of 3, as it involves text processing using movie synopses, includes several preprocessing steps (cleaning, tokenization, vectorization, data splitting), trains a machine learning model (TensorFlow Sequential Model with CountVectorizer and TF-IDF), evaluates it on a test dataset, and demonstrates its operation in a console application. The video presentation is consistent with the code evaluation, explaining the preprocessing steps, data splitting, model training, and the console application. The requirements for a grade of 4 are also met because data mining analysis was performed (examining genre distribution and common words via visualizations), unit tests were created for each preprocessing step, the model was evaluated with multiple metrics (accuracy, and implied performance differences between CountVectorizer and TF-IDF), and visualizations were used to examine the data and model outputs. However, the submission does not meet the requirements for a grade of 5, as only one primary model architecture was explored with different feature extraction methods, rather than building and comparing at least three distinct models. The evaluation, while including multiple metrics and visualizations, could be considered more complex for a benchmark, and a consistent, coherent conclusion based on a rigorous benchmark is not explicitly detailed beyond stating which approach yielded the 'best numbers'.
+ The submission meets the requirements for a grade of 3, as it involves text processing using movie synopses, includes several preprocessing steps (cleaning, tokenization, vectorization, data splitting), trains a machine learning model (TensorFlow Sequential Model with CountVectorizer and TF-IDF), evaluates it on a test dataset, and demonstrates its operation in a console application. The video presentation is consistent with the code evaluation, explaining the preprocessing steps, data splitting, model training, and the console application. The requirements for a grade of 4 are also met because data mining analysis was performed (examining genre distribution and common words via visualizations), unit tests were created for each preprocessing step, the model was evaluated with multiple metrics (accuracy, and implied performance differences between CountVectorizer and TF-IDF), and visualizations were used to examine the data and model outputs. The submission meet the requirements for a grade of 5.
 
 ## Neptun code(s): BLOUW9, AC4MO7
 - **Recommended grade(s):** 5
