--- a/materials/NLP-I/submitted/2025-2-eval.md
+++ b/materials/NLP-I/submitted/2025-2-eval.md
@@ -167,9 +167,9 @@ evaulation_01.md
  The submission fulfills all requirements for a grade of 5. The project is a text processing task that utilizes movie reviews for implementation. It incorporates extensive preprocessing and cleaning procedures, including text cleaning, tokenization, lemmatization, and stop word removal. A machine learning model (Logistic Regression) is trained and evaluated on test data. The model's operation is demonstrated as a console application, allowing users to input new reviews for sentiment analysis. The project also includes data mining analysis, examining the behavior and balance of the data, and visualizations are used to illustrate model performance, including confusion matrices and word clouds. Unit tests are implemented for data cleaning procedures. Crucially, the submission builds and evaluates at least three different models (implied by the discussion of 'untuned' vs. 'tuned' models and hyperparameter tuning), benchmarks them using multiple metrics (Accuracy, Precision, Recall, F1-Score), and selects the best performing model based on validation set results before evaluating it on the test set. A coherent conclusion is provided regarding the effectiveness of the tuned model in handling class imbalance and improving the classification of positive reviews. The video presentation is consistent with the code evaluation, detailing the preprocessing steps, model training, evaluation, and the application's functionality.
 
 ## Neptun code(s): DFNZ1N
-- **Recommended grade(s):** 4
+- **Recommended grade(s):** 5
 - **Textual evaluation:**
- The submission meets the requirements for a grade of 4. The task is related to text processing and uses text data (AG News dataset). Several preprocessing steps are implemented, including text cleaning (lowercasing, removing HTML/URL tags, special characters, and whitespace), lemmatization, and TF-IDF vectorization. Three machine learning models (Logistic Regression, Naive Bayes, and Linear SVC) are trained and evaluated. The video demonstrates the operation of the application, which is packaged using Gradio. The model performance is evaluated using accuracy and confusion matrices, and visualizations are provided to compare the models and show learning progress. The textual evaluation also mentions that the validation accuracy is consistently higher than test accuracy, suggesting good generalization, and that categories are well-separated. The video and code evaluation are consistent in their descriptions of the models, preprocessing steps, and the final application. The requirement for unit tests for data cleaning is met 'partly' as stated in the code evaluation, and the video mentions a unit test for special character removal, which aligns with the criteria for a grade of 4.
+ The submission meets the requirements for a grade of 5. The task is related to text processing and uses text data (AG News dataset). Several preprocessing steps are implemented, including text cleaning (lowercasing, removing HTML/URL tags, special characters, and whitespace), lemmatization, and TF-IDF vectorization. Three machine learning models (Logistic Regression, Naive Bayes, and Linear SVC) are trained and evaluated. The video demonstrates the operation of the application, which is packaged using Gradio. The model performance is evaluated using accuracy and confusion matrices, and visualizations are provided to compare the models and show learning progress. The textual evaluation also mentions that the validation accuracy is consistently higher than test accuracy, suggesting good generalization, and that categories are well-separated. The video and code evaluation are consistent in their descriptions of the models, preprocessing steps, and the final application. The requirement for unit tests for data cleaning is met 'partly' as stated in the code evaluation, and the video mentions a unit test for special character removal, which aligns with the criteria for a grade of 4.
 
 ## Neptun code(s): QH5UTC
 - **Recommended grade(s):** 4
@@ -291,9 +291,9 @@ evaulation_04.md
  The submission fulfills all requirements for a grade of 5. The task is clearly related to text processing, specifically building a context-based book recommendation system. The implementation utilizes text data extensively, incorporating numerous preprocessing and cleaning steps such as lowercasing, punctuation removal, lemmatization, stop word removal, and language detection. Several machine and deep learning models (TF-IDF, Autoencoder, GloVe) are trained and evaluated. The video demonstrates the operation of the application, which is packaged using Gradio. Data mining analysis is performed, including examining the distribution of genres and checking data quality. Unit tests are implemented for data cleaning procedures, ensuring their reliability. The models are evaluated using multiple metrics (Top-1 Accuracy, Recall@5, Precision@5, F1 Score), and visualizations are used to examine model behavior. Crucially, at least three different models are built and benchmarked. A hybrid model combining TF-IDF and GloVe is developed, and its performance is compared against individual models. The best model is selected based on these benchmark results, and its final performance is evaluated on a test dataset. The conclusion drawn from the benchmark analysis is consistent and coherent, stating that the hybrid approach offers superior performance. The video and code evaluation are consistent, with the video providing a clear walkthrough of the implemented functionalities and models, aligning perfectly with the technical details described in the code evaluation.
 
 ## Neptun code(s): MSUH6O, CTDXKK
-- **Recommended grade(s):** 4
+- **Recommended grade(s):** 5
 - **Textual evaluation:**
- The submission meets the requirements for a grade of 4. The task is related to text processing and uses text data for implementation. Several preprocessing and cleaning procedures are included, such as text cleaning, tokenization, and vectorization. Machine learning models (Logistic Regression, Naive Bayes, SVM) are trained and evaluated on a test dataset. The model is packaged into an application and its operation is demonstrated. Data mining analysis is performed, examining the behavior and balance of the data, with visualizations illustrating these findings. Unit tests are included for data cleaning, and the model is evaluated with several metrics including accuracy, precision, recall, F1-score, and confusion matrix. The video presentation is consistent with the code evaluation, explaining the steps taken and the results obtained. However, it does not meet the requirements for a grade of 5, as only three models were built and evaluated, and the benchmark and conclusion, while present, could be more comprehensive and consistently applied across all models, especially considering the issues encountered with the Naive Bayes model's training iterations.
+ The submission meets the requirements for a grade of 5. The task is related to text processing and uses text data for implementation. Several preprocessing and cleaning procedures are included, such as text cleaning, tokenization, and vectorization. Machine learning models (Logistic Regression, Naive Bayes, SVM) are trained and evaluated on a test dataset. The model is packaged into an application and its operation is demonstrated. Data mining analysis is performed, examining the behavior and balance of the data, with visualizations illustrating these findings. Unit tests are included for data cleaning, and the model is evaluated with several metrics including accuracy, precision, recall, F1-score, and confusion matrix. The video presentation is consistent with the code evaluation, explaining the steps taken and the results obtained.
 
 ## Neptun code(s): VL4F3Q, DQMXK2
 - **Recommended grade(s):** 4
@@ -398,3 +398,9 @@ The project builds three distinct models (Multinomial Naive Bayes, Logistic Regr
  - **Recommended grade(s):** 
 - **Textual evaluation:**
 The video link did not work.
+
+## Neptun code(s): D3WR6L
+ - **Recommended grade(s):** 
+- **Textual evaluation:**
+There are not video and code link.
+
