--- a/materials/NLP-I/submitted/2025-2-eval.md
+++ b/materials/NLP-I/submitted/2025-2-eval.md
@@ -395,12 +395,26 @@ The project builds three distinct models (Multinomial Naive Bayes, Logistic Regr
  The submission fulfills all requirements for a grade of 5. The task is clearly related to text processing, specifically plant classification based on Hungarian textual descriptions. The implementation utilizes text data and incorporates several essential preprocessing and cleaning procedures, including text cleaning, tokenization, and TF-IDF vectorization, applied to training, validation, and test datasets. Three distinct machine learning models (Logistic Regression, MLP, and Random Forest) were trained and evaluated. The evaluation process is comprehensive, involving unit tests for data cleaning procedures, performance assessment using multiple metrics (classification report, confusion matrix, F1-score), and visualizations to examine model behavior and data characteristics. A benchmark comparison of the three models was conducted on the validation set, with the best model (Random Forest) then evaluated on the test set, leading to a coherent conclusion about its effectiveness. The entire process is packaged into a functional application with a Gradio interface, and its operation is demonstrated in the video. The video presentation is consistent with the code evaluation, detailing the steps from data loading and preprocessing to model training, evaluation, and application deployment. The explanations of concepts like TF-IDF, tokenization, and model performance are accurate. The conclusion drawn from the benchmark analysis is well-supported by the results.
 
  ## Neptun code(s): WFHBK7
- - **Recommended grade(s):** 
+- **Recommended grade(s):** 
 - **Textual evaluation:**
 The video link did not work.
 
 ## Neptun code(s): D3WR6L
- - **Recommended grade(s):** 
+- **Recommended grade(s):** 
 - **Textual evaluation:**
 There are not video and code link.
 
+## Neptun code(s): GOOXNF
+- **Recommended grade(s):** 
+- **Textual evaluation:**
+Code link was not access.
+
+## Neptun code(s): CB52IT
+- **Recommended grade(s):** 
+- **Textual evaluation:**
+Too many absences. There are not video and code link.
+
+## Neptun code(s): CN8END
+- **Recommended grade(s):** 
+- **Textual evaluation:**
+Too many absences. There are not video and code link.
