--- a/materials/NLP-I/submitted/2025-2-eval.md
+++ b/materials/NLP-I/submitted/2025-2-eval.md
@@ -17,7 +17,7 @@ evaulation_01.md
 - **Textual evaluation:**
  The submission meets the requirements for a grade of 4. The task is related to text processing, specifically movie review sentiment analysis, and utilizes text data. Several preprocessing and cleaning procedures are implemented, including text cleaning (lowercasing, removing special characters, lemmatization), tokenization (implied by vectorization), vectorization, and data splitting into training and testing sets. A machine learning model (SVM, Naive Bayes, Logistic Regression, Decision Tree) is trained and evaluated on a test dataset. The model is packaged into a web application using Streamlit and demonstrated in the video. Data mining analysis is performed, as indicated by the examination of data balance and the use of visualizations to understand model performance. The video mentions a unit test for text cleaning, which aligns with the requirement for unit tests on preprocessing steps. The model is evaluated using multiple metrics (accuracy, F1-score, precision), and its operation is examined with visualizations (bar plots). The conclusion provided in the code evaluation is consistent with the video's demonstration of model performance comparison. The video and code evaluation are coherent, and the concepts are explained correctly. However, it does not meet the criteria for a grade of 5 as only one model (SVM) is ultimately selected and deployed, and there isn't a complex benchmark comparing at least three different models with a clear selection process based on validation set performance before final testing. While multiple models were trained, the benchmark aspect for selecting the *best* model among at least three is not as robust as required for a 5.
 
-## Neptun code(s): A9ATIE, JE1WAQ
+## Neptun code(s): A9ATIE
 - **Recommended grade(s):** 5
 - **Textual evaluation:**
  The submission fulfills all requirements for a grade of 5. The project is a text processing task that utilizes text data for implementation, specifically SMS spam detection. It incorporates several preprocessing and cleaning procedures, including text cleaning (lowercasing, punctuation removal, URL/email/number removal), tokenization, and TF-IDF vectorization. A machine learning model (BiLSTM) and several classical models (Naive Bayes, Logistic Regression, Linear SVC) were trained and evaluated. The evaluation is comprehensive, using multiple metrics like accuracy, precision, recall, F1-score, confusion matrices, and ROC curves. Visualizations are used to examine model performance, with 15 visualizations mentioned. Data mining analysis was performed to examine data behavior and balance, as evidenced by the discussion of class imbalance and its impact on classification. Unit tests were included to verify different pipeline components, including preprocessing and model loading, and all tests passed. The project builds at least three different models (Naive Bayes, Logistic Regression, Linear SVC, and BiLSTM are all discussed and compared), and they are evaluated in a benchmark manner. The best model (Linear SVM) was selected based on validation performance and its final performance was evaluated on a test dataset. A coherent conclusion is provided, recommending Linear SVC for production due to its performance and efficiency, while acknowledging the insights gained from the BiLSTM model. The video presentation and source code evaluation are consistent, with both highlighting the same models, preprocessing steps, evaluation metrics, and the final web application. The concepts and explanations are correct, demonstrating a strong understanding of NLP and machine learning principles.
@@ -305,6 +305,11 @@ evaulation_04.md
 - **Textual evaluation:**
  The submission meets the requirements for a grade of 4. The task is related to text processing (hate speech detection) and uses text data. Several preprocessing and cleaning procedures are included, such as TF-IDF vectorization, padding, and handling class imbalance with SMOTE. Multiple machine learning models (Logistic Regression, Linear SVM, Naive Bayes) and a deep learning model (LSTM) are trained and evaluated. The model is evaluated on a test dataset using multiple metrics like accuracy, f1-score, classification report, and confusion matrix. Visualizations are used to examine the data distribution. The completed model is packaged into a Flask web application and its operation is demonstrated. A unit test is included to verify model and vectorizer loading and prediction validity. The video presentation and source code evaluation are consistent, describing a complete NLP pipeline. The conclusion provided in the source code evaluation is coherent with the described work. The only requirement not met for a grade of 5 is the benchmark evaluation across at least 3 different models with a clear selection of the best model based on validation performance before final testing, and a consistent conclusion based on this benchmark. While multiple models are trained and compared, the video and code evaluation do not explicitly detail a rigorous benchmark process for selecting the 'best' model based on validation data before final evaluation on the test set, nor a detailed conclusion derived from such a benchmark.
 
+ ## Neptun code(s): YLYPDM, IXSKJR
+- **Recommended grade(s):** 4
+- **Textual evaluation:**
+ The submission meets the requirements for a grade of 4. In the 5th grade, the authors did not create the unit tests. In addition, the solution did not include an interactive application; instead, there was only a brief demonstration of how the model worked.
+
 ## Neptun code(s): ZDV9BS
 - **Recommended grade(s):** 5
 - **Textual evaluation:**
@@ -418,3 +423,13 @@ Too many absences. There are not video and code link.
 - **Recommended grade(s):** 
 - **Textual evaluation:**
 Too many absences. There are not video and code link.
+
+## Neptun code(s): JE1WAQ
+- **Recommended grade(s):** 
+- **Textual evaluation:**
+Too many absences.
+
+## Neptun code(s): I8LM91
+- **Recommended grade(s):** 
+- **Textual evaluation:**
+Too many absences.
